--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
   <body>
     <header></header>
     <main>
-      <input id="input" type="text" />
+      <div class="container">
+        <input id="input" type="text" />
+      </div>
     </main>
     <footer></footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
